--- a/index.html
+++ b/index.html
@@ -17,72 +17,97 @@
 </head>
 
 <body>
-<div id="app"></div>
-<script>
-    window.$docsify = {
-        name: '跳跳虎的小酒馆',
-        repo: 'https://tiaotiaohu98.github.io',       //'https://github.com/tiaotiaohu98/tiaotiaohu98.github.io.git',
-        coverpage: true,
-        autoHeader: true,
-        loadSidebar: true,
-        loadNavbar: true,
-        subMaxLevel: 5,
-        auto2top: true,
-        homepage: '/README.md',
-        search: {
-            placeholder: {
-                '/': '搜索',
-                '/zh-cn/': '搜索',
-                '/en-us/': 'Type to search'
+    <div id="app"></div>
+    <script>
+        window.$docsify = {
+            name: '跳跳虎的小酒馆',
+            repo: 'https://tiaotiaohu98.github.io',
+            coverpage: true,
+            autoHeader: true,
+            loadSidebar: true,
+            loadNavbar: true,
+            subMaxLevel: 5,
+            auto2top: true,
+            homepage: '/README.md',
+            search: {
+                placeholder: {
+                    '/': '搜索',
+                    '/zh-cn/': '搜索',
+                    '/en-us/': 'Type to search'
+                },
+                noData: {
+                    '/': '找不到结果',
+                    '/zh-cn/': '找不到结果',
+                    '/en-us/': 'No Results'
+                }
             },
-            noData: {
-                '/': '找不到结果',
-                '/zh-cn/': '找不到结果',
-                '/en-us/': 'No Results'
-            }
-        },
-        plugins: [
-            function (hook) {
-                var footer = [
-                    '<hr/>',
-                    '<footer>',
-                    '<span><a href=""></a></span>',
-                    '<span><a href="" target="_blank"></a></span>',
-                    '</footer>'
-                ].join('');
+            ga: "UA-XXXXX-Y",
+            count:{ countable:true, fontsize:'0.9em', color:'rgb(90,90,90)', language:'chinese' } ,
+            // 分页导航插件
+            pagination: {
+                previousText: '上一页',
+                nextText: '下一页',
+                crossChapter: true,
+                crossChapterText: true
+            },
+            plugins: [
+                function (hook) {
+                    var footer = [
+                        '<hr/>',
+                        '<footer>',
+                        '<span><a href=""></a></span>',
+                        '<span><a href="" target="_blank"></a></span>',
+                        '</footer>'
+                    ].join('');
 
-                hook.afterEach(function (html) {
-                    return html + footer
-                })
-            }
-        ]
-    }
-</script>
-
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-  <!-- 搜索插件 -->
-  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
-  <!--<script src="/static/docsify.min.js"></script>-->
-  <script src="/static/search.js"></script>
-  <!-- 一键复制插件 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
-  <!-- 代码高亮 -->
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-c.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-json.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-shell-session.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-http.min.js"></script>  
-
-
-<!--
-<script src="static/docsify.min.js"></script>
-<script src="/static/search.js"></script>
-<script src="/static/zoom-image.js"></script>
-<script src="/static/prism-python.min.js"></script>-->
-
-
+                    hook.afterEach(function (html) {
+                        return html + footer
+                    })
+                }
+            ]
+        }
+    </script>
+    <!-- Docsify v4 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <!-- VUE支持 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <!-- 压缩版 -->
+    <script src="//cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/vuep/dist/vuep.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <!-- 搜索插件 -->
+    <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script> -->
+    <!--<script src="/static/docsify.min.js"></script>-->
+    <script src="/static/search.js"></script>
+    <!-- 一键复制插件 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+    <!-- 代码高亮 -->
+    <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-c.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-json.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-shell-session.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-http.min.js"></script>  
+    <!-- 谷歌分析 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script>
+    <!-- 表情 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
+    <!-- 外部脚本 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/external-script.min.js"></script>
+    <!-- 放大图片 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+    <!-- 翻页插件 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
+    <!-- 字数统计 -->
+    <script src="//unpkg.com/docsify-count/dist/countable.js"></script> 
+    <!-- 分页导航 -->
+    <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+    <!--
+    <script src="static/docsify.min.js"></script>
+    <script src="/static/search.js"></script>
+    <script src="/static/zoom-image.js"></script>
+    <script src="/static/prism-python.min.js"></script>-->
 </body>
 
 </html>
